fixed cp menu spacing problems

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -25,10 +25,9 @@ body {
   background: #984949;
   }
 
-body.cp-toolbar-on {
-  margin-top: 42px;
+.clear {
+  clear:both;
   }
-
 
 /* TYPE STYLES */
 
@@ -84,12 +83,9 @@ div.terms {
 #container { }
 
 #top {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
 	height: 42px;
 	background:url(images/top-bottom-bg.png) repeat-x #000 0 -9px;
+	position:relative;
 	}
 
 #header-top, #navbar, #content-main, #header-main, #footer {
