--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -8,11 +8,17 @@ body {
   font:.9em/165% arial, helvetica, sans-serif;
   }
 
-body.sidebar-right, body.no-sidebars {
+body.navbar-on {
   background: url(images/body-bg-horiz.png) repeat-x 0 198px #fff;
   }
 
+body.cp-toolbar-on {
+  background-position: 0 260px;
+  }
 
+body.navbar-off {
+  background: url(images/body-bg.png) repeat-y center top #fff;
+  }
 
 #container {
     width: 910px;
