--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -3,16 +3,20 @@ html {
     }
 
 body {
-    background: url(images/body-bg.png) repeat-x left top #fff;
+    background: url(images/body-bg.png) repeat-x 0 0 #fff;
     color:#353535;
-    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif; 
+    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
-   
+
+body.cp-toolbar-on {
+  background-position: 0 42px;
+  }
+
 #container {
     width: 910px;
     margin: 0 auto;
     }
-    
+
 a, a:visited {
     color:#8A281B;
     }
@@ -27,7 +31,7 @@ h1, h2, h3, #sidebar-right a {
     font-weight: normal;
     color:#889095;
     }
-    
+
 h1, h2 {
     font-size: 1.4em;
     }
@@ -47,7 +51,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #content-wrapper, #header-wrapper {
     padding-left: 179px;
     }
-    
+
 #sidebar-right {
     border-left: 1px solid #ccc;
     }
@@ -68,7 +72,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     padding-top: 16px;
     color: #FFF;
     }
-    
+
 #header-wrapper {
     height: 155px;
     }
@@ -86,22 +90,22 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited {
     color:#FFF;
     }
-    
+
 #header a, #header a:visited {
     text-decoration: none;
     }
-    
+
 #header a:hover {
     color:#F9E433;
     }
-        
+
 #navbar li {
     margin-right: 1.5em;
     text-transform: uppercase;
     font-size: 1.1em;
-    }  
-    
-    
+    }
+
+
 /* MAIN CONTENT AREA */
 
 body.sidebar-left #content {
@@ -110,11 +114,11 @@ body.sidebar-left #content {
 
 body.sidebar-right #content {
     margin-right: 30px;
-    }    
-    
-    
+    }
+
+
 body.two-sidebars #content {
     margin-left: 20px;
     margin-right: 20px;
-    }    
-    
+    }
+
