--- a/sites/all/themes/scholar_theme_03/scholar-theme-03.css
+++ b/sites/all/themes/scholar_theme_03/scholar-theme-03.css
@@ -5,14 +5,18 @@ html {
 body {
     background: url(images/body-bg.png) repeat-x left top #fff;
     color:#282828;
-    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif; 
+    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
-   
+
+body.cp-toolbar-on {
+  background-position: 0 42px;
+  }
+
 #container {
     width: 910px;
     margin: 0 auto;
     }
-    
+
 a, a:visited {
     color:#353535;
     text-decoration: underline;
@@ -44,7 +48,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #content-wrapper, #header-wrapper {
     padding-left: 179px;
     }
-    
+
 #sidebar-right {
     border-left: 1px solid #ccc;
     }
@@ -77,20 +81,20 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited {
     color:#282828;
     }
-    
+
 #header h1 a, #header h1 a:visited {
     text-decoration: none;
     }
-    
+
 #header h2 {
     font-size: 1.5em;
     line-height: 1em;
     }
-    
+
 #header a, #header a:visited {
     text-decoration: none;
     }
-        
+
 #navbar li {
     margin-right: 1.5em;
     text-transform: uppercase;
@@ -100,12 +104,12 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #navbar li a, #navbar li a:visited {
     color: #fff;
     }
-    
+
 #navbar li a:hover {
     color: #F9E433;
     }
-    
-    
+
+
 /* MAIN CONTENT AREA */
 
 body.sidebar-left #content {
@@ -114,11 +118,11 @@ body.sidebar-left #content {
 
 body.sidebar-right #content {
     margin-right: 30px;
-    }    
-    
-    
+    }
+
+
 body.two-sidebars #content {
     margin-left: 20px;
     margin-right: 20px;
-    }    
-    
+    }
+
