--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -4,8 +4,8 @@ body {
     font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
-body.admin-menu {
-  background-position: 50% 20px;
+body.cp-toolbar-on {
+  background-position: 50% 42px;
   }
 
 #wrapper {
